tests/invalid/bytes_center_wrong_arg_count/main.py
def run_case() -> None:
    b: bytes = b"ab"
    b.center(4)


if __name__ == "__main__":
    run_case()
